Added kotlin, linux, curl.

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 baseURL = "https://maxtar.github.io"
 languageCode = "ru-RU"
+defaultContentLanguage = "ru"
 title = "Max Wiki Site"
 
 # theme = "learn"
